<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateHabitActivity">

    <EditText
        android:id="@+id/et_title"
        android:inputType="text"
        android:hint="@string/et_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_description"
        android:inputType="textMultiLine"
        android:lines="2"
        android:hint="@string/et_desc_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bn_choose_image"
        android:text="@string/choose_image"
        android:onClick="chooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/iv_image_preview"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:contentDescription="@string/selected_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true" />
    <Button
        android:id="@+id/bn_save_habit"
        android:text="@string/save_habit"
        android:onClick="storeHabit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tv_error_message"
        android:visibility="invisible"
        android:textColor="#E53935"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>